--- a/secciones/inicio/inicio.html
+++ b/secciones/inicio/inicio.html
@@ -1,29 +1,29 @@
 <link rel="stylesheet" href="../../estilos/estilo.css" />
 
-<section class="contenedor__flex__columna" id="inicio">
-  <div class="nombre">
-    <div class="titulo inicio__titulo">
-      <strong class="parte1"><span>C</span>arlos<span>M</span>ario</strong>
-      <strong class="parte2"><span>R</span>ivera.com</strong>
-    </div>
-  </div>
-  <div class="texto efectos__combinados">
-    <h5><span>A</span>nálisis de <span>D</span>atos <span>A</span>vanzados</h5>
-    <h6><span>D</span>esarrollador de <span>S</span>oftware</h6>
-  </div>
-  <div>
-    <a href="../../html/curriculum/curriculum.html" class="botonLink holograma"
-      >Mi Curriculum !
-    </a>
-  </div>
-
-  <div class="texto__animado__zoom margen__mediano">
-    <span>A</span>pasionado por la <span>T</span>ecnología>
-  </div>
-
-  <div class="contenedor_letra margen__grande">
-    <div class="letra-grande">
-      Doy Soluciones faciles a problemas complejos...
-    </div>
-  </div>
+<section class="contenedor__flex__columna__around" id="inicio">
+	<div class="nombre">
+		<div class="titulo inicio__titulo">
+			<strong class="parte1"><span>C</span>arlos<span>M</span>ario</strong>
+			<strong class="parte2"><span>R</span>ivera.com</strong>
+		</div>
+	</div>
+	<div class="texto efectos__combinados">
+		<h5><span>A</span>nálisis de <span>D</span>atos <span>A</span>vanzados</h5>
+		<h6><span>D</span>esarrollador de <span>S</span>oftware</h6>
+	</div>
+	<div>
+		<a
+			href="../../html/curriculum/curriculum.html"
+			class="botonLink holograma enlace enlace__efecto__3d enlace__subrayado__deslizante"
+			target="_blank"
+			>Mi Curriculum !
+		</a>
+	</div>
+	<div class="texto__animado__zoom subtitulo">
+		<p><span>A</span>pasionado por la <span>T</span>ecnología></p>
+		<p>
+			<span>D</span>oy <span>S</span>oluciones <span>F</span>aciles a
+			<span>P</span>roblemas <span>C</span>omplejos...
+		</p>
+	</div>
 </section>
