--- a/secciones/sobre_mi/sobre_mi.html
+++ b/secciones/sobre_mi/sobre_mi.html
@@ -8,7 +8,7 @@
   <!-- Información Personal y Texto -->
   <div class="sobre__mi__columna pulso">
     <h2 class="subtitulo">
-      <span>S</span>oy <span>C</span>arlos <span>M</span>ario
+      <span> &lt;&frasl;&nbsp;S</span>oy <span>C</span>arlos <span>M</span>ario
       <span>R</span>ivera<span>&nbsp;&frasl;&gt;</span>
     </h2>
     <p class="margen__mediano">
