--- a/html/footer/cookies.html
+++ b/html/footer/cookies.html
@@ -182,7 +182,10 @@
           Recomendamos que los usuarios se informen sobre las cookies y la
           manera en que pueden gestionarlas. Para más detalles, te sugerimos
           consultar la
-          <a href="https://www.allaboutcookies.org" target="_blank"
+          <a
+            href="https://www.allaboutcookies.org"
+            class="enlace enlace__efecto__3d enlace__subrayado__deslizante"
+            target="_blank"
             >guía de cookies</a
           >.
         </p>
