--- a/html/laboratorio/laboratorio.html
+++ b/html/laboratorio/laboratorio.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="menu__configuracion.css" />
     <link rel="stylesheet" href="laboratorio.css" />
+    <link
+      rel="stylesheet"
+      href="./Textos/texto_3d_rapido/texto_3d_rapido.css"
+    />
     <style>
       body{
         display flex;
@@ -203,7 +207,13 @@
     <!-- Menú lateral -->
     <div class="menu__sidebar">
       <ul>
-        <li><a href="#">Inicio</a></li>
+        <li>
+          <a
+            href="#"
+            class="enlace enlace__efecto__3d enlace__subrayado__deslizante"
+            >Inicio</a
+          >
+        </li>
         <li class="submenu">
           <a href="#">Animaciones</a>
           <ul>
@@ -217,6 +227,9 @@
     </div>
     <script class="./js/menu.js"></script>
     <!-- Botón de configuración -->
+
+    <div class="texto_3d_rapido"><h1>carlos</h1></div>
+
     <section class="section-laboratorio">
       <div class="stars">
         <div class="star" style="--top-offset: 10%; --fall-delay: 0s">...</div>
