--- a/secciones/sobre_mi/sobre_mi.html
+++ b/secciones/sobre_mi/sobre_mi.html
@@ -1,129 +1,262 @@
 <link rel="stylesheet" href="../../estilos/estilo.css" />
 
 <link rel="stylesheet" href="sobre_mi.css" />
+<style>
+	.contenedor__3d {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		background-color: transparent;
+		perspective: 800px; / Controla la profundidad del efecto 3D */
+	}
+
+	.caja {
+		width: 25px;
+		height: 25px;
+		transform-style: preserve-3d; /* Permite el efecto 3D */
+		transition: transform 0.5s;
+	}
+
+	.caja:hover {
+		transform: rotateY(20deg) rotateX(20deg); /* Rotación en hover */
+	}
+
+	.cara {
+		position: absolute;
+		width: 25px;
+		height: 25px;
+		background: url("logo.png") no-repeat center/cover;
+
+	}
+
+	.cara:nth-child(1) {
+		transform: translateZ(10px); /* Frente */
+	}
+
+	.cara:nth-child(2) {
+		background: url("logo.png") no-repeat center/cover;
+		transform: rotateY(90deg) translateZ(1px); /* Derecha */
+	}
+
+	.cara:nth-child(3) {
+		background: url("logo.png") no-repeat center/cover;
+		transform: rotateY(-90deg) translateZ(10px); /* Izquierda */
+	}
+
+	.cara:nth-child(4) {
+		background: url("logo.png") no-repeat center/cover;
+		transform: rotateX(90deg) translateZ(10px); /* Arriba */
+	}
+
+	.cara:nth-child(5) {
+		background: url("logor.png") no-repeat center/cover;
+		transform: rotateX(-90deg) translateZ(10px); /* Abajo */
+	}
+
+	.cara:nth-child(6) {
+		background: url("logo.png") no-repeat center/cover;
+		transform: translateZ(-10px); /* Espalda */
+	}
+</style>
+
+<style>
+	.contenedor__3d__quick {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 100vh;
+		background-color: #f0f0f0;
+		perspective: 800px; /* Controla la profundidad del efecto 3D */
+	}
+
+	.cara__quick {
+		width: 20px;
+		height: 20px;
+		transform-style: preserve-3d; /* Permite el efecto 3D */
+		transition: transform 0.5s;
+	}
+
+	.cara__quick:hover {
+		transform: rotateY(20deg) rotateX(20deg); /* Rotación en hover */
+	}
+
+	.cara__quick {
+		position: absolute;
+		width: 20px;
+		height: 20px;
+		background: url("../../images/aws/quicksight.webp") no-repeat center/cover;
+	}
+
+	.cara__quick:nth-child(1) {
+		transform: translateZ(10px); /* Frente */
+	}
+
+	.cara__quick:nth-child(2) {
+		background: url("../../images/aws/quicksight.webp") no-repeat center/cover;
+		transform: rotateY(90deg) translateZ(10px); /* Derecha */
+	}
+
+	.cara__quick:nth-child(3) {
+		background: url("../../images/aws/quicksight.webp") no-repeat center/cover;
+		transform: rotateY(-90deg) translateZ(10px); /* Izquierda */
+	}
+
+	.cara__quick:nth-child(4) {
+		background: url("../../images/aws/quicksight.webp") no-repeat center/cover;
+		transform: rotateX(90deg) translateZ(10px); /* Arriba */
+	}
+
+	.cara__quick:nth-child(5) {
+		background: url("../../images/aws/quicksight.webp") no-repeat center/cover;
+		transform: rotateX(-90deg) translateZ(10px); /* Abajo */
+	}
+
+	.cara__quick:nth-child(6) {
+		background: url("../../images/aws/quicksight.webp") no-repeat center/cover;
+		transform: translateZ(-10px); /* Espalda */
+	}
+</style>
 <h2>
-  <strong class="subtitulo"> <span>S</span>obre <span>M</span>i</strong>
+	<strong class="subtitulo"> <span>S</span>obre <span>M</span>i</strong>
 </h2>
 <section id="movimiento_skills_sobre_mi" class="coontenedor__flex">
-  <!-- Información Personal y Texto -->
-  <div class="sobre__mi__columna pulso">
-    <h2 class="subtitulo">
-      <span> &lt;&frasl;&nbsp;S</span>oy <span>C</span>arlos <span>M</span>ario
-      <span>R</span>ivera<span>&nbsp;&frasl;&gt;</span>
-    </h2>
-    <p class="margen__mediano">
-      <strong class="texto__3d">Desarrollador de software</strong>
-      Con más de 12 años de experiencia, apasionado por la creación de
-      aplicaciones robustas y escalables, he trabajado en proyectos desde la
-      etapa de diseño hasta la implementación de soluciones.
-    </p>
-    <p class="margen__mediano">
-      <strong class="texto__3d">Como Ingeniero de datos,</strong>
-      mi objetivo es crear soluciones eficientes que mejoren la experiencia del
-      usuario.
-    </p>
-    <p class="margen__mediano">
-      <strong class="texto__3d">Un Arquitecto de soluciones, </strong>
-      con experiencia en diseño, implementación y optimización de
-      infraestructuras en la nube.
-    </p>
-    <p class="texto__3d"><br />Auditor interno ISO 27001.</p>
-    <br />
-  </div>
+	<!-- Información Personal y Texto -->
+	<div class="sobre__mi__columna pulso">
+		<h2 class="subtitulo">
+			<span> &lt;&frasl;&nbsp;S</span>oy <span>C</span>arlos <span>M</span>ario
+			<span>R</span>ivera<span>&nbsp;&frasl;&gt;</span>
+		</h2>
+		<p class="margen__mediano">
+			<strong class="texto__3d">Desarrollador de software</strong>
+			Con más de 12 años de experiencia, apasionado por la creación de
+			aplicaciones robustas y escalables, he trabajado en proyectos desde la
+			etapa de diseño hasta la implementación de soluciones.
+		</p>
+		<p class="margen__mediano">
+			<strong class="texto__3d">Como Ingeniero de datos,</strong>
+			mi objetivo es crear soluciones eficientes que mejoren la experiencia del
+			usuario.
+		</p>
+		<p class="margen__mediano">
+			<strong class="texto__3d">Un Arquitecto de soluciones, </strong>
+			con experiencia en diseño, implementación y optimización de
+			infraestructuras en la nube.
+		</p>
+		<p class="texto__3d"><br />Auditor interno ISO 27001.</p>
+		<br />
+	</div>
 
-  <!-- Habilidades y Animaciones -->
-  <div class="sobre__mi__movimiento_skills">
-    <!-- Contenedor de habilidades -->
-    <div id="movimiento_skills">
-      <div class="movimiento_skills-grid">
-        <!-- Cubo central y habilidades -->
-        <div class="skills-logo cambiarlogo"></div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/frontend/html.svg" alt="HTML" />
-          <div class="movimiento_skills-grid-skill-tooltip">HTML</div>
-        </div>
+	<!-- Habilidades y Animaciones -->
+	<div class="sobre__mi__movimiento_skills">
+		<!-- Contenedor de habilidades -->
+		<div id="movimiento_skills">
+			<div class="movimiento_skills-grid">
+				<div class="caja">
+					<div class="cara"></div>
+					<div class="cara"></div>
+					<div class="cara"></div>
+					<div class="cara"></div>
+					<div class="cara"></div>
+					<div class="cara"></div>
+				</div>
+				<!-- Cubo central y habilidades -->
+				<!-- <div class="skills-logo cambiarlogo"></div> -->
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/frontend/html.svg" alt="HTML" />
+					<div class="movimiento_skills-grid-skill-tooltip">HTML</div>
+				</div>
 
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/frontend/js.svg" alt="JavaScript" />
-          <div class="movimiento_skills-grid-skill-tooltip">JavaScript</div>
-        </div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/frontend/js.svg" alt="JavaScript" />
+					<div class="movimiento_skills-grid-skill-tooltip">JavaScript</div>
+				</div>
 
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/frontend/css.ico" alt="CSS" />
-          <div class="movimiento_skills-grid-skill-tooltip">CSS</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/frontend/react.svg" alt="React" />
-          <div class="movimiento_skills-grid-skill-tooltip">React</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/frontend/angular.svg" alt="Angular" />
-          <div class="movimiento_skills-grid-skill-tooltip">Angular</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/aws/quicksight.webp" alt="QuickSight" />
-          <div class="movimiento_skills-grid-skill-tooltip">QuickSight</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/aws/ec2.webp" alt="EC2" />
-          <div class="movimiento_skills-grid-skill-tooltip">EC2</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/aws/athena.webp" alt="Athena" />
-          <div class="movimiento_skills-grid-skill-tooltip">Athena</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/aws/s3.webp" alt="S3" />
-          <div class="movimiento_skills-grid-skill-tooltip">S3</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/aws/glue.webp" alt="Glue" />
-          <div class="movimiento_skills-grid-skill-tooltip">Glue</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img
-            src="../../images/backend/netcore.svg"
-            alt="ASP.NET Core ( c#, vb)"
-          />
-          <div class="movimiento_skills-grid-skill-tooltip">netcore</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/backend/python.svg" alt=" python" />
-          <div class="movimiento_skills-grid-skill-tooltip">python</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/backend/java.svg" alt="java" />
-          <div class="movimiento_skills-grid-skill-tooltip">java</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/Backend/api.svg" alt="Api" />
-          <div class="movimiento_skills-grid-skill-tooltip">Api</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/backend/csharp_m.svg" alt=" logo de c# " />
-          <p>c#</p>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src=" ../../images/db/mysql.svg " alt=" mysql " />
-          <div class="movimiento_skills-grid-skill-tooltip">MySQL</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/db/maria.svg" alt=" maria db " />
-          <div class="movimiento_skills-grid-skill-tooltip">maria db</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img
-            src=" ../../images/db/file_type_sql_icon_130152.svg "
-            alt=" Sql server "
-          />
-          <div class="movimiento_skills-grid-skill-tooltip">Sql server</div>
-        </div>
-        <div class="movimiento_skills-grid-skill">
-          <img src="../../images/aws/rds.webp" alt="RDS" />
-          <div class="movimiento_skills-grid-skill-tooltip">RDS</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="../../scripts/js/movimiento_skills.js"></script>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/frontend/css.ico" alt="CSS" />
+					<div class="movimiento_skills-grid-skill-tooltip">CSS</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/frontend/react.svg" alt="React" />
+					<div class="movimiento_skills-grid-skill-tooltip">React</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/frontend/angular.svg" alt="Angular" />
+					<div class="movimiento_skills-grid-skill-tooltip">Angular</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<div class=".contenedor__3d__quick">
+						<div class="caja">
+							<div class="cara__quick"></div>
+							<div class="cara__quick"></div>
+							<div class="cara__quick"></div>
+							<div class="cara__quick"></div>
+							<div class="cara__quick"></div>
+							<div class="cara__quick"></div>
+						</div>
+					</div>
+					<div class="movimiento_skills-grid-skill-tooltip">QuickSight</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/aws/ec2.webp" alt="EC2" />
+					<div class="movimiento_skills-grid-skill-tooltip">EC2</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/aws/athena.webp" alt="Athena" />
+					<div class="movimiento_skills-grid-skill-tooltip">Athena</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/aws/s3.webp" alt="S3" />
+					<div class="movimiento_skills-grid-skill-tooltip">S3</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/aws/glue.webp" alt="Glue" />
+					<div class="movimiento_skills-grid-skill-tooltip">Glue</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img
+						src="../../images/backend/netcore.svg"
+						alt="ASP.NET Core ( c#, vb)"
+					/>
+					<div class="movimiento_skills-grid-skill-tooltip">netcore</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/backend/python.svg" alt=" python" />
+					<div class="movimiento_skills-grid-skill-tooltip">python</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/backend/java.svg" alt="java" />
+					<div class="movimiento_skills-grid-skill-tooltip">java</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/Backend/api.svg" alt="Api" />
+					<div class="movimiento_skills-grid-skill-tooltip">Api</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/backend/csharp_m.svg" alt=" logo de c# " />
+					<p>c#</p>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src=" ../../images/db/mysql.svg " alt=" mysql " />
+					<div class="movimiento_skills-grid-skill-tooltip">MySQL</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/db/maria.svg" alt=" maria db " />
+					<div class="movimiento_skills-grid-skill-tooltip">maria db</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img
+						src=" ../../images/db/file_type_sql_icon_130152.svg "
+						alt=" Sql server "
+					/>
+					<div class="movimiento_skills-grid-skill-tooltip">Sql server</div>
+				</div>
+				<div class="movimiento_skills-grid-skill">
+					<img src="../../images/aws/rds.webp" alt="RDS" />
+					<div class="movimiento_skills-grid-skill-tooltip">RDS</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script src="../../scripts/js/movimiento_skills.js"></script>
 </section>
