--- a/secciones/bi/bi.html
+++ b/secciones/bi/bi.html
@@ -216,7 +216,7 @@
 					<a
 						href="./Dolar_completo_API/Dolar_completo_API.html"
 						role="Ir a pagina de los datos historicos oficiales"
-						class="enlace enlace__efecto__3d enlace__subrayado__deslizante"
+						class="holograma enlace enlace__efecto__3d enlace__subrayado__deslizante"
 						target="_blank"
 						title="ir a datos historicos oficiales"
 					>
