--- a/secciones/contacto/contacto.html
+++ b/secciones/contacto/contacto.html
@@ -17,7 +17,7 @@
 					<a
 						href="../../html/laboratorio/laboratorio.html"
 						target="_blank"
-						class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante"
+						class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
 						>Componente 1</a
 					>
 				</li>
@@ -30,13 +30,13 @@
 
 		<!-- Contacto (resaltado y central) -->
 		<div class="tarjeta__footer tarjeta__footer--contacto gradiente__frio">
-			<h2 class="tarjeta__footer__titulo">Contactactame</h2>
+			<h2 class="tarjeta__footer__titulo">Contactame</h2>
 			<div class="tarjeta__linea__gradiente"></div>
 			<div class="tarjeta__footer__contacto-item">
 				<i class="material-icons">email</i>
 				<a
 					href="mailto:carlosmrz100@hotmail.com"
-					class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante"
+					class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
 					>carlosmrz100@hotmail.com</a
 				>
 			</div>
@@ -55,7 +55,7 @@
 					<a
 						href="../../assets/apps/sara/sara.HTML"
 						target="_blank"
-						class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante"
+						class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
 						>Sarita - Videojuego</a
 					>
 				</li>
@@ -63,7 +63,7 @@
 					<a
 						href="../../assets/apps/focus_riveradev/focus_riveradev.html"
 						target="_blank"
-						class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante"
+						class="tarjeta__footer__enlace enlace enlace__efecto__resplandor enlace__subrayado__deslizante holograma"
 						>Pomodoro - Productividad</a
 					>
 				</li>
@@ -75,7 +75,7 @@
 		<div class="animacion__resplandor sonido-hover">
 			<span>C</span>arlos<span>M</span>ario<span>R</span>ivera.com
 		</div>
-		<h6 class="texto__atractivo"><span>L</span>inks<span>Ú</span>tiles</h6>
+		<h6 class="texto__atractivo"><span>R</span>edes<span>S</span>ociales</h6>
 		<div class="contenedor__medio">
 			<a
 				href="https://www.linkedin.com/in/carlosmariorivera"
