--- a/secciones/proyectos/proyectos.html
+++ b/secciones/proyectos/proyectos.html
@@ -11,15 +11,15 @@
 	</head>
 	<body>
 		<h2 class="subtitulo"><span &lt;&frasl;&nbsp;>P</span>royectos</h2>
-		<h3>
-			<strong class=""
-				><span>L</span>ogros <span>D</span>estacados en
-				<span>P</span>royectos</strong
-			>
-		</h3>
 
 		<div class="contenedor__flex__columna padding-grande">
 			<!-- KPIs y Logros Destacados -->
+			<h3>
+				<strong class="subtitulo"
+					><span>L</span>ogros <span>D</span>estacados en
+					<span>P</span>royectos</strong
+				>
+			</h3>
 			<div class="contenedor__flex__proyectos texto">
 				<div class="tarjeta__kpi_proyecos">
 					<h3 class="tarjeta_kpi__value holograma">95%</h3>
@@ -34,6 +34,7 @@
 				</div>
 
 				<div class="tarjeta__kpi_proyecos">
+					<h3 class="tarjeta_kpi__value holograma">ISO 27001</h3>
 					<div class="tarjeta__kpi__data gradiente__frio">
 						<div class="tarjeta__kpi__icon">
 							<i class="material-icons icono__ajustado">supervisor_account</i>
@@ -43,7 +44,6 @@
 							Certificación en normas de seguridad
 						</p>
 					</div>
-					<h3 class="tarjeta_kpi__value holograma">ISO 27001</h3>
 				</div>
 
 				<div class="tarjeta__kpi_proyecos">
@@ -60,6 +60,7 @@
 				</div>
 
 				<div class="tarjeta__kpi_proyecos">
+					<h3 class="tarjeta_kpi__value holograma">Optimización</h3>
 					<div class="tarjeta__kpi__data gradiente__frio">
 						<div class="tarjeta__kpi__icon">
 							<i class="material-icons icono__ajustado">construction</i>
@@ -68,7 +69,6 @@
 							Mejora en emisión de documentos electrónicos
 						</p>
 					</div>
-					<h3 class="tarjeta_kpi__value holograma">Optimización</h3>
 				</div>
 
 				<div class="tarjeta__kpi_proyecos">
@@ -162,7 +162,7 @@
 										<span class="icono__python"></span>, IA, API
 										<a
 											href="#bi"
-											class="enlace enlace__efecto__3d enlace__subrayado__deslizante"
+											class="holograma enlace enlace__efecto__3d enlace__subrayado__deslizante"
 											target="_blank"
 											rel="noopener"
 											>Ver más</a
