--- a/secciones/bi/Dolar_completo_API/Dolar_completo_API.html
+++ b/secciones/bi/Dolar_completo_API/Dolar_completo_API.html
@@ -14,10 +14,13 @@
       }
     </style>
   </head>
-  <body>
-    <section class="contenedor__flex__columna__centrado">
+  <body class="contenedor__padding">
+    <section class="contenedor__flex__columna__centrado contenedor__padding">
       <h1>Datos desde API en Tabla</h1>
-      <table id="Dolar_completo_API" class="tabla__contenedor">
+      <table
+        id="Dolar_completo_API"
+        class="tabla__contenedor contenedor__padding"
+      >
         <thead>
           <tr>
             <th>Valor</th>
@@ -134,8 +137,12 @@
     <footer>
       <p>
         Crédito:
-        <a href="https://www.datos.gov.co/ class="enlace enlace__efecto__3d  enlace__subrayado__deslizante"" target="_blank">datos.gov.co</a>,
-        recursos abiertos del Gobierno de Colombia.
+        <a
+          href="https://www.datos.gov.co/"
+          class="enlace enlace__efecto__3d enlace__subrayado__deslizante"
+          target="_blank"
+          >datos.gov.co</a
+        >, recursos abiertos del Gobierno de Colombia.
       </p>
     </footer>
     <iframe
