--- a/secciones/habilidades/habilidades.html
+++ b/secciones/habilidades/habilidades.html
@@ -5,93 +5,93 @@
 <link rel="stylesheet" href="./habilidades.css" />
 
 <h2 class="subtitulo">
-	<span> &lt;&frasl;&nbsp;</span>
-	<span>H</span>abilidades(descubre)
+  <span> &lt;&frasl;&nbsp;</span>
+  <span>H</span>abilidades(descubre)
 </h2>
 <div class="contenedor">
-	<div class="contenedor__medio contenedor__padding">
-		<ul class="contenedor__grid_2">
-			<!-- Habilidad 1 -->
-			<li class="habilidades__item contenedor__aumentotamano gradiente__frio">
-				<article class="habilidades__icono">
-					<div class="habilidades__contenido">
-						<div class="habilidades__titulo">
-							<span class="material-icons habilidades__imagen">code</span>
-							<h2 class="habilidades__subtitulo">
-								<strong>Desarrollo de Software:</strong>
-							</h2>
-						</div>
-						<div class="habilidades__linea"></div>
-						<p class="habilidades__descripcion texto">
-							.NET(C#, VB), Versionamiento en GitHub, SubVersion.
-						</p>
-					</div>
-				</article>
-			</li>
+  <div class="contenedor__medio contenedor__padding">
+    <ul class="contenedor__grid_2">
+      <!-- Habilidad 1 -->
+      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
+        <article class="habilidades__icono">
+          <div class="habilidades__contenido">
+            <div class="habilidades__titulo">
+              <span class="material-icons habilidades__imagen">code</span>
+              <h2 class="habilidades__subtitulo">
+                <strong>Desarrollo de Software:</strong>
+              </h2>
+            </div>
+            <div class="tarjeta__linea__gradiente"></div>
+            <p class="habilidades__descripcion texto">
+              .NET(C#, VB), Versionamiento en GitHub, SubVersion.
+            </p>
+          </div>
+        </article>
+      </li>
 
-			<!-- Habilidad 2 -->
-			<li class="habilidades__item contenedor__aumentotamano gradiente__frio">
-				<article class="habilidades__icono">
-					<div class="habilidades__contenido">
-						<div class="habilidades__titulo">
-							<span class="material-icons habilidades__imagen"
-								>integration_instructions</span
-							>
-							<h2 class="habilidades__subtitulo">
-								<strong>Interoperatividad:</strong>
-							</h2>
-						</div>
-						<div class="habilidades__linea"></div>
-						<p class="habilidades__descripcion texto">
-							Web Services - SOAP - API Rest. Postman.
-						</p>
-					</div>
-				</article>
-			</li>
+      <!-- Habilidad 2 -->
+      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
+        <article class="habilidades__icono">
+          <div class="habilidades__contenido">
+            <div class="habilidades__titulo">
+              <span class="material-icons habilidades__imagen"
+                >integration_instructions</span
+              >
+              <h2 class="habilidades__subtitulo">
+                <strong>Interoperatividad:</strong>
+              </h2>
+            </div>
+            <div class="tarjeta__linea__gradiente"></div>
+            <p class="habilidades__descripcion texto">
+              Web Services - SOAP - API Rest. Postman.
+            </p>
+          </div>
+        </article>
+      </li>
 
-			<!-- Habilidad 3 -->
-			<li class="habilidades__item contenedor__aumentotamano gradiente__frio">
-				<article class="habilidades__icono">
-					<div class="habilidades__contenido">
-						<div class="habilidades__titulo">
-							<span class="material-icons habilidades__imagen">group_work</span>
-							<h2 class="habilidades__subtitulo">
-								<strong>Metodologías ágiles:</strong>
-							</h2>
-						</div>
-						<div class="habilidades__linea"></div>
-						<p class="habilidades__descripcion texto">SCRUM, DevOps.</p>
-					</div>
-				</article>
-			</li>
+      <!-- Habilidad 3 -->
+      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
+        <article class="habilidades__icono">
+          <div class="habilidades__contenido">
+            <div class="habilidades__titulo">
+              <span class="material-icons habilidades__imagen">group_work</span>
+              <h2 class="habilidades__subtitulo">
+                <strong>Metodologías ágiles:</strong>
+              </h2>
+            </div>
+            <div class="tarjeta__linea__gradiente"></div>
+            <p class="habilidades__descripcion texto">SCRUM, DevOps.</p>
+          </div>
+        </article>
+      </li>
 
-			<!-- Habilidad 4 -->
-			<li class="habilidades__item contenedor__aumentotamano gradiente__frio">
-				<article class="habilidades__icono">
-					<div class="habilidades__contenido">
-						<div class="habilidades__titulo">
-							<span class="material-icons habilidades__imagen"
-								>receipt_long</span
-							>
-							<h2 class="habilidades__subtitulo">
-								<strong>Facturación electrónica:</strong>
-							</h2>
-						</div>
-						<div class="habilidades__linea"></div>
-						<p class="habilidades__descripcion texto">UBL, XML, JSON.</p>
-					</div>
-				</article>
-			</li>
-		</ul>
-	</div>
+      <!-- Habilidad 4 -->
+      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
+        <article class="habilidades__icono">
+          <div class="habilidades__contenido">
+            <div class="habilidades__titulo">
+              <span class="material-icons habilidades__imagen"
+                >receipt_long</span
+              >
+              <h2 class="habilidades__subtitulo">
+                <strong>Facturación electrónica:</strong>
+              </h2>
+            </div>
+            <div class="tarjeta__linea__gradiente"></div>
+            <p class="habilidades__descripcion texto">UBL, XML, JSON.</p>
+          </div>
+        </article>
+      </li>
+    </ul>
+  </div>
 
-	<script>
-		for (let i = 0; i < 100; i++) {
-			const star = document.createElement("div");
-			star.className = "star";
-			star.style.left = `${Math.random() * 100}%`;
-			star.style.top = `${Math.random() * 100}%`;
-			document.body.appendChild(star);
-		}
-	</script>
+  <script>
+    for (let i = 0; i < 100; i++) {
+      const star = document.createElement("div");
+      star.className = "star";
+      star.style.left = `${Math.random() * 100}%`;
+      star.style.top = `${Math.random() * 100}%`;
+      document.body.appendChild(star);
+    }
+  </script>
 </div>
