--- a/secciones/sobre_mi/logo__3d.html
+++ b/secciones/sobre_mi/logo__3d.html
@@ -38,22 +38,22 @@
 			}
 
 			.cara:nth-child(2) {
-				background: url("logo.png") no-repeat center/cover;
+				background: url("logor.png") no-repeat center/cover;
 				transform: rotateY(90deg) translateZ(150px); /* Derecha */
 			}
 
 			.cara:nth-child(3) {
-				background: url("logo.png") no-repeat center/cover;
+				background: url("logor.png") no-repeat center/cover;
 				transform: rotateY(-90deg) translateZ(150px); /* Izquierda */
 			}
 
 			.cara:nth-child(4) {
-				background: url("logo.png") no-repeat center/cover;
+				background: url("l ogo.png") no-repeat center/cover;
 				transform: rotateX(90deg) translateZ(150px); /* Arriba */
 			}
 
 			.cara:nth-child(5) {
-				background: url("logo.png") no-repeat center/cover;
+				background: url("lo go.png") no-repeat center/cover;
 				transform: rotateX(-90deg) translateZ(150px); /* Abajo */
 			}
 
