--- a/secciones/sobre_mi/sobre_mi.html
+++ b/secciones/sobre_mi/sobre_mi.html
@@ -128,22 +128,22 @@
 			<span>R</span>ivera<span>&nbsp;&frasl;&gt;</span>
 		</h2>
 		<p class="margen__mediano">
-			<strong class="texto__3d">Desarrollador de software</strong>
+			<strong class="pulso">Desarrollador de software</strong>
 			Con más de 12 años de experiencia, apasionado por la creación de
 			aplicaciones robustas y escalables, he trabajado en proyectos desde la
 			etapa de diseño hasta la implementación de soluciones.
 		</p>
 		<p class="margen__mediano">
-			<strong class="texto__3d">Como Ingeniero de datos,</strong>
+			<strong class="pulso">Como Ingeniero de datos,</strong>
 			mi objetivo es crear soluciones eficientes que mejoren la experiencia del
 			usuario.
 		</p>
 		<p class="margen__mediano">
-			<strong class="texto__3d">Un Arquitecto de soluciones, </strong>
+			<strong class="pulso">Un Arquitecto de soluciones, </strong>
 			con experiencia en diseño, implementación y optimización de
 			infraestructuras en la nube.
 		</p>
-		<p class="texto__3d"><br />Auditor interno ISO 27001.</p>
+		<p class="pulso"><br />Auditor interno ISO 27001.</p>
 		<br />
 	</div>
 
