--- a/secciones/proyectos/proyectos.html
+++ b/secciones/proyectos/proyectos.html
@@ -2,194 +2,195 @@
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Proyectos</title>
-		<link rel="stylesheet" href="../../estilos/estilo.css" />
-		<link rel="stylesheet" href="./proyectos.css" />
-	</head>
-	<body>
-		<h2 class="subtitulo"><span &lt;&frasl;&nbsp;>P</span>royectos</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Proyectos</title>
+    <link rel="stylesheet" href="../../estilos/estilo.css" />
+    <link rel="stylesheet" href="./proyectos.css" />
+  </head>
+  <body>
+    <h2 class="subtitulo"><span &lt;&frasl;&nbsp;>P</span>royectos</h2>
 
-		<div class="contenedor__flex__columna padding-grande">
-			<!-- KPIs y Logros Destacados -->
-			<h3>
-				<strong class="subtitulo"
-					><span>L</span>ogros <span>D</span>estacados en
-					<span>P</span>royectos</strong
-				>
-			</h3>
-			<div class="contenedor__flex__proyectos texto">
-				<div class="tarjeta__kpi_proyecos">
-					<h3 class="tarjeta_kpi__value holograma">95%</h3>
-					<div class="tarjeta__kpi__data gradiente__frio">
-						<div class="tarjeta__kpi__icon gradiente__frio">
-							<i class="material-icons">badge</i>
-						</div>
-						<div class="tarjeta__kpi_proyecos__detalles">
-							Reducción en el tamaño de documentos electrónicos
-						</div>
-					</div>
-				</div>
+    <div class="contenedor__flex__columna padding-grande">
+      <!-- KPIs y Logros Destacados -->
+      <h3>
+        <strong class="subtitulo"
+          ><span>L</span>ogros <span>D</span>estacados en
+          <span>P</span>royectos</strong
+        >
+      </h3>
+      <div class="contenedor__flex__proyectos texto">
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value">95%</h3>
 
-				<div class="tarjeta__kpi_proyecos">
-					<h3 class="tarjeta_kpi__value holograma">ISO 27001</h3>
-					<div class="tarjeta__kpi__data gradiente__frio">
-						<div class="tarjeta__kpi__icon">
-							<i class="material-icons icono__ajustado">supervisor_account</i>
-						</div>
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon gradiente__frio">
+              <i class="material-icons">badge</i>
+            </div>
+            <div class="tarjeta__kpi_proyecos__detalles">
+              Reducción en el tamaño de documentos electrónicos
+            </div>
+          </div>
+        </div>
 
-						<p class="tarjeta__kpi_proyecos__detalles">
-							Certificación en normas de seguridad
-						</p>
-					</div>
-				</div>
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value">ISO 27001</h3>
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon">
+              <i class="material-icons icono__ajustado">supervisor_account</i>
+            </div>
 
-				<div class="tarjeta__kpi_proyecos">
-					<h3 class="tarjeta_kpi__value holograma">Top 10</h3>
-					<div class="tarjeta__kpi__data gradiente__frio">
-						<div class="tarjeta__kpi__icon">
-							<i class="material-icons icono__ajustado">timer_10</i>
-						</div>
+            <p class="tarjeta__kpi_proyecos__detalles">
+              Certificación en normas de seguridad
+            </p>
+          </div>
+        </div>
 
-						<p class="tarjeta__kpi_proyecos__detalles">
-							Proveedores tecnológicos con más documentos emitidos
-						</p>
-					</div>
-				</div>
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value">Top 10</h3>
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon">
+              <i class="material-icons icono__ajustado">timer_10</i>
+            </div>
 
-				<div class="tarjeta__kpi_proyecos">
-					<h3 class="tarjeta_kpi__value holograma">Optimización</h3>
-					<div class="tarjeta__kpi__data gradiente__frio">
-						<div class="tarjeta__kpi__icon">
-							<i class="material-icons icono__ajustado">construction</i>
-						</div>
-						<p class="tarjeta__kpi_proyecos__detalles">
-							Mejora en emisión de documentos electrónicos
-						</p>
-					</div>
-				</div>
+            <p class="tarjeta__kpi_proyecos__detalles">
+              PT con más documentos emitidos ante la DIAN
+            </p>
+          </div>
+        </div>
 
-				<div class="tarjeta__kpi_proyecos">
-					<h3 class="tarjeta_kpi__value holograma">Precios del Dólar</h3>
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value">Optimización</h3>
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon">
+              <i class="material-icons icono__ajustado">construction</i>
+            </div>
+            <p class="tarjeta__kpi_proyecos__detalles">
+              Mejora en emisión de documentos electrónicos
+            </p>
+          </div>
+        </div>
 
-					<div class="tarjeta__kpi__data gradiente__frio">
-						<div class="tarjeta__kpi__icon">
-							<i class="material-icons icono__ajustado">monetization_on</i>
-						</div>
-						<p class="tarjeta__kpi_proyecos__detalles">
-							Sistema para predecir precios del dólar
-						</p>
-					</div>
-				</div>
-			</div>
+        <div class="tarjeta__kpi_proyecos">
+          <h3 class="tarjeta_kpi__value">Precios del Dólar</h3>
 
-			<div class="contenedor__proyectos">
-				<div class="proyectos__grid">
-					<div class="proyecto">
-						<h2 class="proyecto__title subtitulo">
-							<span>F</span>acturación <span>E</span>lectrónica
-						</h2>
-						<img
-							src="../../images/proyectos/fe.jpeg"
-							alt="Proceso de Facturación Electrónica"
-							class="proyecto__img"
-							loading="lazy"
-						/>
-						<div class="proyecto__content texto">
-							<div id="description1" class="proyecto__description collapsed">
-								<p>
-									<span>I</span>mplementé sistemas de facturación electrónica
-									para la emisión, recepción y procesamiento de facturas
-									electrónicas. Este proyecto mejora la eficiencia y la
-									transparencia en las transacciones comerciales.
-								</p>
-								<ul>
-									<li>
-										<span>D</span>esarrollé interfaces de usuario intuitivas y
-										responsivas.
-									</li>
-									<li>
-										<span>I</span>ntegré sistemas de validación y seguridad de
-										datos.
-									</li>
-									<p>
-										<strong> <span>T</span>ecnologías:</strong> HTML, CSS,
-										JavaScript
-									</p>
-								</ul>
-							</div>
-							<div
-								class="toggle-button"
-								onclick="toggleDescription('description1')"
-							>
-								Mostrar más
-							</div>
-						</div>
-					</div>
+          <div class="tarjeta__kpi__data gradiente__frio">
+            <div class="tarjeta__kpi__icon">
+              <i class="material-icons icono__ajustado">monetization_on</i>
+            </div>
+            <p class="tarjeta__kpi_proyecos__detalles">
+              Sistema para predecir precios del dólar
+            </p>
+          </div>
+        </div>
+      </div>
 
-					<div class="proyecto">
-						<h2 class="proyecto__title subtitulo">
-							<span>P</span>recios <span>H</span>istóricos del
-							<span>D</span>ólar
-						</h2>
-						<img
-							src="../../images/proyectos/dolar.jpeg"
-							alt="Análisis de Precios del Dólar"
-							class="proyecto__img"
-							loading="lazy"
-						/>
-						<div class="proyecto__content">
-							<div id="description2" class="proyecto__description collapsed">
-								<p>
-									<span>D</span>esarrollé un sistema para analizar y predecir
-									los precios históricos del dólar en Colombia utilizando
-									inteligencia artificial y herramientas de Business
-									Intelligence.
-								</p>
-								<ul>
-									<li>
-										<span>I</span>mplementación de dashboards interactivos.
-									</li>
-									<li>
-										<span>U</span>so de modelos de IA para predicciones
-										precisas.
-									</li>
-									<p>
-										<strong> <span>T</span>ecnologías:</strong>
-										<span class="icono__javascript"></span>, AWS QuickSight,
-										<span class="icono__python"></span>, IA, API
-										<a
-											href="#bi"
-											class="holograma enlace enlace__efecto__3d enlace__subrayado__deslizante"
-											target="_blank"
-											rel="noopener"
-											>Ver más</a
-										>
-									</p>
-								</ul>
-							</div>
-							<div
-								class="toggle-button"
-								onclick="toggleDescription('description2')"
-							>
-								Mostrar más
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<script>
-			function toggleDescription(id) {
-				const description = document.getElementById(id);
-				const toggleButton = description.nextElementSibling;
-				description.classList.toggle("collapsed");
-				toggleButton.textContent = description.classList.contains("collapsed")
-					? "Mostrar más"
-					: "Mostrar menos";
-			}
-		</script>
-	</body>
+      <div class="contenedor__proyectos">
+        <div class="proyectos__grid">
+          <div class="proyecto">
+            <h2 class="proyecto__title subtitulo">
+              <span>F</span>acturación <span>E</span>lectrónica
+            </h2>
+            <img
+              src="../../images/proyectos/fe.jpeg"
+              alt="Proceso de Facturación Electrónica"
+              class="proyecto__img"
+              loading="lazy"
+            />
+            <div class="proyecto__content texto">
+              <div id="description1" class="proyecto__description collapsed">
+                <p>
+                  <span>I</span>mplementé sistemas de facturación electrónica
+                  para la emisión, recepción y procesamiento de facturas
+                  electrónicas. Este proyecto mejora la eficiencia y la
+                  transparencia en las transacciones comerciales.
+                </p>
+                <ul>
+                  <li>
+                    <span>D</span>esarrollé interfaces de usuario intuitivas y
+                    responsivas.
+                  </li>
+                  <li>
+                    <span>I</span>ntegré sistemas de validación y seguridad de
+                    datos.
+                  </li>
+                  <p>
+                    <strong> <span>T</span>ecnologías:</strong> HTML, CSS,
+                    JavaScript
+                  </p>
+                </ul>
+              </div>
+              <div
+                class="toggle-button"
+                onclick="toggleDescription('description1')"
+              >
+                Mostrar más
+              </div>
+            </div>
+          </div>
+
+          <div class="proyecto">
+            <h2 class="proyecto__title subtitulo">
+              <span>P</span>recios <span>H</span>istóricos del
+              <span>D</span>ólar
+            </h2>
+            <img
+              src="../../images/proyectos/dolar.jpeg"
+              alt="Análisis de Precios del Dólar"
+              class="proyecto__img"
+              loading="lazy"
+            />
+            <div class="proyecto__content">
+              <div id="description2" class="proyecto__description collapsed">
+                <p>
+                  <span>D</span>esarrollé un sistema para analizar y predecir
+                  los precios históricos del dólar en Colombia utilizando
+                  inteligencia artificial y herramientas de Business
+                  Intelligence.
+                </p>
+                <ul>
+                  <li>
+                    <span>I</span>mplementación de dashboards interactivos.
+                  </li>
+                  <li>
+                    <span>U</span>so de modelos de IA para predicciones
+                    precisas.
+                  </li>
+                  <p>
+                    <strong> <span>T</span>ecnologías:</strong>
+                    <span class="icono__javascript"></span>, AWS QuickSight,
+                    <span class="icono__python"></span>, IA, API
+                    <a
+                      href="#bi"
+                      class="holograma enlace enlace__efecto__3d enlace__subrayado__deslizante"
+                      target="_blank"
+                      rel="noopener"
+                      >Ver más</a
+                    >
+                  </p>
+                </ul>
+              </div>
+              <div
+                class="toggle-button"
+                onclick="toggleDescription('description2')"
+              >
+                Mostrar más
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>
+      function toggleDescription(id) {
+        const description = document.getElementById(id);
+        const toggleButton = description.nextElementSibling;
+        description.classList.toggle("collapsed");
+        toggleButton.textContent = description.classList.contains("collapsed")
+          ? "Mostrar más"
+          : "Mostrar menos";
+      }
+    </script>
+  </body>
 </html>
