--- a/html/laboratorio/Textos/texto_3d_rapido/texto_3d_rapido.html
+++ b/html/laboratorio/Textos/texto_3d_rapido/texto_3d_rapido.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>CodePen - 3D letters - sugar sweet</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+	<head>
+		<meta charset="UTF-8" />
+		<title>CodePen - 3D letters - sugar sweet</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+			rel="stylesheet"
+		/>
 
-    <link rel="stylesheet" href="./texto_3d_rapido.css" />
-  </head>
-  <body>
-    <!-- partial:index.partial.html -->
-    <div class="texto_3d_rapido">
-      <h1>texto_3d_rapido</h1>
-    </div>
-    <!-- partial -->
-  </body>
+		<link rel="stylesheet" href="./texto_3d_rapido.css" />
+		<link rel="stylesheet" href="../../menu__configuracion.css" />
+	</head>
+	<body>
+		<!-- partial:index.partial.html -->
+		<div class="texto_3d_rapido">
+			<p>texto_3d_rapido</p>
+		</div>
+		<!-- partial -->
+	</body>
 </html>
