--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <i class="material-icons" style="font-size: 48px">menu</i>
         </div>
 
-        <ul class="navbar__menu">
+        <ul class="navbar__menu gradiente__frio">
           <li class="navbar__menu-item">
             <a href="#sobre_mi" class="navbar__link"
               ><span class="navbar__link-highlight">S</span>obre mí</a
@@ -182,14 +182,15 @@
         frameborder="0"
         id="inicio"
         allowfullscreen
-        height="50vh"
+        height="100vh"
       ></iframe>
 
       <iframe
         src="./secciones/sobre_mi/sobre_mi.html"
         frameborder="0"
+        height="110vh"
         scrolling="no"
-        class="doble__pantalla"
+        class=""
         title="sobre_mi"
         id="sobre_mi"
         allowfullscreen
