--- a/secciones/inicio/inicio.html
+++ b/secciones/inicio/inicio.html
@@ -1,6 +1,9 @@
 <link rel="stylesheet" href="../../estilos/estilo.css" />
 
-<section class="contenedor__flex__columna__around contenedor__padding  margen__grande" id="inicio">
+<section
+  class="contenedor__flex__columna__around contenedor__padding"
+  id="inicio"
+>
   <div class="nombre">
     <div class="titulo inicio__titulo">
       <strong class="parte1"><span>C</span>arlos<span>M</span>ario</strong>
@@ -19,13 +22,9 @@
     target="_blank"
     >¡Mi Curriculum!</a
   >
-  <h6 class="texto">
-      ><span>A</span>pasionado por la <span>T</span>ecnología</span
-    >
-  </div>
-
-  <h6 class="texto">
+  <h6 class="texto maquina__escribir">
     <span>D</span>oy <span>S</span>oluciones <span>F</span>aciles a
     <span>P</span>roblemas <span>C</span>omplejos...
   </h6>
+  <h6 class="texto"><span>A</span>pasionado por la <span>T</span>ecnología</h6>
 </section>
