--- a/secciones/habilidades/habilidades.html
+++ b/secciones/habilidades/habilidades.html
@@ -4,85 +4,66 @@
 <link rel="stylesheet" href="../../estilos/general.css" />
 <link rel="stylesheet" href="./habilidades.css" />
 
-<h2 class="subtitulo">
-  <span> &lt;&frasl;&nbsp;</span>
-  <span>H</span>abilidades(descubre)
-</h2>
-<div class="contenedor">
-  <div class="contenedor__medio contenedor__padding">
-    <ul class="contenedor__grid_2">
-      <!-- Habilidad 1 -->
-      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
-        <article class="habilidades__icono">
-          <div class="habilidades__contenido">
-            <div class="habilidades__titulo">
-              <span class="material-icons habilidades__imagen">code</span>
-              <h2 class="habilidades__subtitulo">
-                <strong>Desarrollo de Software:</strong>
-              </h2>
-            </div>
-            <div class="tarjeta__linea__gradiente"></div>
-            <p class="habilidades__descripcion texto">
-              .NET(C#, VB), Versionamiento en GitHub, SubVersion.
-            </p>
-          </div>
-        </article>
-      </li>
+<h2 class="subtitulo"><span>H</span>abilidades</h2>
+<div class="contenedor contenedor__padding">
+  <div class="contenedor__medio contenedor__grid_2">
+    <!-- Habilidad 1 -->
 
-      <!-- Habilidad 2 -->
-      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
-        <article class="habilidades__icono">
-          <div class="habilidades__contenido">
-            <div class="habilidades__titulo">
-              <span class="material-icons habilidades__imagen"
-                >integration_instructions</span
-              >
-              <h2 class="habilidades__subtitulo">
-                <strong>Interoperatividad:</strong>
-              </h2>
-            </div>
-            <div class="tarjeta__linea__gradiente"></div>
-            <p class="habilidades__descripcion texto">
-              Web Services - SOAP - API Rest. Postman.
-            </p>
-          </div>
-        </article>
-      </li>
+    <div class="habilidades__contenido gradiente__frio contenedor__padding">
+      <div class="habilidades__titulo">
+        <span class="material-icons habilidades__imagen">code</span>
+        <h2 class="habilidades__subtitulo">
+          <strong>Desarrollo de Software:</strong>
+        </h2>
+      </div>
+      <div class="tarjeta__linea__gradiente"></div>
+      <p class="habilidades__descripcion texto">
+        .NET(C#, VB), Versionamiento en GitHub, SubVersion.
+      </p>
+    </div>
 
-      <!-- Habilidad 3 -->
-      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
-        <article class="habilidades__icono">
-          <div class="habilidades__contenido">
-            <div class="habilidades__titulo">
-              <span class="material-icons habilidades__imagen">group_work</span>
-              <h2 class="habilidades__subtitulo">
-                <strong>Metodologías ágiles:</strong>
-              </h2>
-            </div>
-            <div class="tarjeta__linea__gradiente"></div>
-            <p class="habilidades__descripcion texto">SCRUM, DevOps.</p>
-          </div>
-        </article>
-      </li>
+    <!-- Habilidad 2 -->
 
-      <!-- Habilidad 4 -->
-      <li class="habilidades__item contenedor__aumentotamano gradiente__frio">
-        <article class="habilidades__icono">
-          <div class="habilidades__contenido">
-            <div class="habilidades__titulo">
-              <span class="material-icons habilidades__imagen"
-                >receipt_long</span
-              >
-              <h2 class="habilidades__subtitulo">
-                <strong>Facturación electrónica:</strong>
-              </h2>
-            </div>
-            <div class="tarjeta__linea__gradiente"></div>
-            <p class="habilidades__descripcion texto">UBL, XML, JSON.</p>
-          </div>
-        </article>
-      </li>
-    </ul>
+    <div class="habilidades__contenido gradiente__frio contenedor__padding">
+      <div class="habilidades__titulo">
+        <span class="material-icons habilidades__imagen"
+          >integration_instructions</span
+        >
+        <h2 class="habilidades__subtitulo">
+          <strong>Interoperatividad:</strong>
+        </h2>
+      </div>
+      <div class="tarjeta__linea__gradiente"></div>
+      <p class="habilidades__descripcion texto">
+        Web Services - SOAP - API Rest. Postman.
+      </p>
+    </div>
+
+    <!-- Habilidad 3 -->
+
+    <div class="habilidades__contenido gradiente__frio contenedor__padding">
+      <div class="habilidades__titulo">
+        <span class="material-icons habilidades__imagen">group_work</span>
+        <h2 class="habilidades__subtitulo">
+          <strong>Metodologías ágiles:</strong>
+        </h2>
+      </div>
+      <div class="tarjeta__linea__gradiente"></div>
+      <p class="habilidades__descripcion texto">SCRUM, DevOps.</p>
+    </div>
+
+    <!-- Habilidad 4 -->
+
+    <div class="habilidades__contenido gradiente__frio contenedor__padding">
+      <div class="habilidades__titulo">
+        <span class="material-icons habilidades__imagen">receipt_long</span>
+        <h2 class="habilidades__subtitulo">
+          <strong>Facturación electrónica:</strong>
+        </h2>
+      </div>
+      <div class="tarjeta__linea__gradiente"></div>
+      <p class="habilidades__descripcion texto">UBL, XML, JSON.</p>
+    </div>
   </div>
 
   <script>
